CtParser.py
# Generated from Ct.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CtParser ( Parser ):

    grammarFileName = "Ct.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'()'", "'<~'", 
                     "'<-'", "'('", "')'", "':'", "'&'", "'$'", "'?'", "'!'", 
                     "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'''", "'`'", 
                     "','", "'->'", "'*'", "'^'", "'.'", "'-'", "'lib'", 
                     "'fn'", "'type'", "'var'", "'char'", "'i8'", "'i16'", 
                     "'i32'", "'i64'", "'u8'", "'u16'", "'u32'", "'u64'", 
                     "'f32'", "'f64'", "'bool'", "'size'", "'if'", "'else'", 
                     "'while'", "'match'" ]

    symbolicNames = [ "<INVALID>", "INT_CONST", "UINT_CONST", "FLOAT_CONST", 
                      "CHAR_CONST", "STR_CONST", "BOOL_CONST", "UNIT", "LEFT_COPY", 
                      "LEFT_MOVE", "LPAREN", "RPAREN", "COLON", "AMPERSAND", 
                      "DOLLAR", "QUESTION_MARK", "EXCLAMATION_MARK", "LBRACKET", 
                      "RBRACKET", "LBRACE", "RBRACE", "LANGLE_BRACKET", 
                      "RANGLE_BRACKET", "APOSTROPHE", "GRAVE_ACCENT", "COMMA", 
                      "RIGHT_MOVE", "ASTERISK", "CARET", "DOT", "DASH", 
                      "LIB", "FN", "TYPE", "VAR", "CHAR", "I8", "I16", "I32", 
                      "I64", "U8", "U16", "U32", "U64", "F32", "F64", "BOOL", 
                      "SIZE", "IF", "ELSE", "WHILE", "MATCH", "ID", "COMMENT", 
                      "WS" ]

    RULE_file_ = 0
    RULE_lib_def = 1
    RULE_lib_items = 2
    RULE_exported_items = 3
    RULE_exported_item = 4
    RULE_lib_item = 5
    RULE_type_decl = 6
    RULE_glob_var_decl = 7
    RULE_fn_decl = 8
    RULE_type_def = 9
    RULE_fn_def = 10
    RULE_glob_var_def = 11
    RULE_param_annot = 12
    RULE_params = 13
    RULE_placehldr_annot = 14
    RULE_placehldrs = 15
    RULE_param = 16
    RULE_param_for_param = 17
    RULE_placehldr = 18
    RULE_path = 19
    RULE_type_spec = 20
    RULE_immut = 21
    RULE_base_type = 22
    RULE_array_qual = 23
    RULE_vla_qual = 24
    RULE_ptr_qual = 25
    RULE_adr_qual = 26
    RULE_struct_qual = 27
    RULE_union_qual = 28
    RULE_field = 29
    RULE_func_qual = 30
    RULE_immut_func_qual = 31
    RULE_typedef = 32
    RULE_arg_annot = 33
    RULE_fn_body = 34
    RULE_stmt = 35
    RULE_local_var_decl = 36
    RULE_local_var_def = 37
    RULE_arrow = 38
    RULE_cmp_stmt = 39
    RULE_if_stmt = 40
    RULE_else_stmt = 41
    RULE_iter_stmt = 42
    RULE_block = 43
    RULE_match_stmt = 44
    RULE_case_ = 45
    RULE_res_stmt = 46
    RULE_move_stmt = 47
    RULE_drop_stmt = 48
    RULE_expr_stmt = 49
    RULE_expr = 50
    RULE_prim_expr = 51
    RULE_operation = 52
    RULE_handle = 53
    RULE_get_adr = 54
    RULE_get_ptr = 55
    RULE_deref_adr = 56
    RULE_deref_ptr = 57
    RULE_indexing = 58
    RULE_field_select = 59
    RULE_fn_call = 60
    RULE_method_call = 61
    RULE_ctor = 62
    RULE_const_ = 63
    RULE_struct_ctor = 64
    RULE_union_ctor = 65
    RULE_array_ctor = 66
    RULE_position_initer = 67
    RULE_initer = 68
    RULE_designator = 69

    ruleNames =  [ "file_", "lib_def", "lib_items", "exported_items", "exported_item", 
                   "lib_item", "type_decl", "glob_var_decl", "fn_decl", 
                   "type_def", "fn_def", "glob_var_def", "param_annot", 
                   "params", "placehldr_annot", "placehldrs", "param", "param_for_param", 
                   "placehldr", "path", "type_spec", "immut", "base_type", 
                   "array_qual", "vla_qual", "ptr_qual", "adr_qual", "struct_qual", 
                   "union_qual", "field", "func_qual", "immut_func_qual", 
                   "typedef", "arg_annot", "fn_body", "stmt", "local_var_decl", 
                   "local_var_def", "arrow", "cmp_stmt", "if_stmt", "else_stmt", 
                   "iter_stmt", "block", "match_stmt", "case_", "res_stmt", 
                   "move_stmt", "drop_stmt", "expr_stmt", "expr", "prim_expr", 
                   "operation", "handle", "get_adr", "get_ptr", "deref_adr", 
                   "deref_ptr", "indexing", "field_select", "fn_call", "method_call", 
                   "ctor", "const_", "struct_ctor", "union_ctor", "array_ctor", 
                   "position_initer", "initer", "designator" ]

    EOF = Token.EOF
    INT_CONST=1
    UINT_CONST=2
    FLOAT_CONST=3
    CHAR_CONST=4
    STR_CONST=5
    BOOL_CONST=6
    UNIT=7
    LEFT_COPY=8
    LEFT_MOVE=9
    LPAREN=10
    RPAREN=11
    COLON=12
    AMPERSAND=13
    DOLLAR=14
    QUESTION_MARK=15
    EXCLAMATION_MARK=16
    LBRACKET=17
    RBRACKET=18
    LBRACE=19
    RBRACE=20
    LANGLE_BRACKET=21
    RANGLE_BRACKET=22
    APOSTROPHE=23
    GRAVE_ACCENT=24
    COMMA=25
    RIGHT_MOVE=26
    ASTERISK=27
    CARET=28
    DOT=29
    DASH=30
    LIB=31
    FN=32
    TYPE=33
    VAR=34
    CHAR=35
    I8=36
    I16=37
    I32=38
    I64=39
    U8=40
    U16=41
    U32=42
    U64=43
    F32=44
    F64=45
    BOOL=46
    SIZE=47
    IF=48
    ELSE=49
    WHILE=50
    MATCH=51
    ID=52
    COMMENT=53
    WS=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CtParser.EOF, 0)

        def lib_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CtParser.Lib_defContext)
            else:
                return self.getTypedRuleContext(CtParser.Lib_defContext,i)


        def getRuleIndex(self):
            return CtParser.RULE_file_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_" ):
                listener.enterFile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_" ):
                listener.exitFile_(self)




    def file_(self):

        localctx = CtParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140
                self.lib_def()
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CtParser.LIB):
                    break

            self.state = 145
            self.match(CtParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lib_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIB(self):
            return self.getToken(CtParser.LIB, 0)

        def ID(self):
            return self.getToken(CtParser.ID, 0)

        def COLON(self):
            return self.getToken(CtParser.COLON, 0)

        def LPAREN(self):
            return self.getToken(CtParser.LPAREN, 0)

        def exported_items(self):
            return self.getTypedRuleContext(CtParser.Exported_itemsContext,0)


        def RPAREN(self):
            return self.getToken(CtParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CtParser.LBRACE, 0)

        def lib_items(self):
            return self.getTypedRuleContext(CtParser.Lib_itemsContext,0)


        def RBRACE(self):
            return self.getToken(CtParser.RBRACE, 0)

        def getRuleIndex(self):
            return CtParser.RULE_lib_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLib_def" ):
                listener.enterLib_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLib_def" ):
                listener.exitLib_def(self)




    def lib_def(self):

        localctx = CtParser.Lib_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lib_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CtParser.LIB)
            self.state = 148
            self.match(CtParser.ID)
            self.state = 149
            self.match(CtParser.COLON)
            self.state = 150
            self.match(CtParser.LPAREN)
            self.state = 151
            self.exported_items()
            self.state = 152
            self.match(CtParser.RPAREN)
            self.state = 153
            self.match(CtParser.LBRACE)
            self.state = 154
            self.lib_items()
            self.state = 155
            self.match(CtParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lib_itemsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lib_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CtParser.Lib_itemContext)
            else:
                return self.getTypedRuleContext(CtParser.Lib_itemContext,i)


        def getRuleIndex(self):
            return CtParser.RULE_lib_items

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLib_items" ):
                listener.enterLib_items(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLib_items" ):
                listener.exitLib_items(self)




    def lib_items(self):

        localctx = CtParser.Lib_itemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lib_items)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                self.lib_item()
                self.state = 160 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CtParser.FN) | (1 << CtParser.TYPE) | (1 << CtParser.VAR))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exported_itemsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exported_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CtParser.Exported_itemContext)
            else:
                return self.getTypedRuleContext(CtParser.Exported_itemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CtParser.COMMA)
            else:
                return self.getToken(CtParser.COMMA, i)

        def getRuleIndex(self):
            return CtParser.RULE_exported_items

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExported_items" ):
                listener.enterExported_items(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExported_items" ):
                listener.exitExported_items(self)




    def exported_items(self):

        localctx = CtParser.Exported_itemsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exported_items)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 162
                self.exported_item()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CtParser.COMMA:
                    self.state = 163
                    self.match(CtParser.COMMA)


                self.state = 168 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CtParser.FN) | (1 << CtParser.TYPE) | (1 << CtParser.VAR))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exported_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_decl(self):
            return self.getTypedRuleContext(CtParser.Type_declContext,0)


        def fn_decl(self):
            return self.getTypedRuleContext(CtParser.Fn_declContext,0)


        def glob_var_decl(self):
            return self.getTypedRuleContext(CtParser.Glob_var_declContext,0)


        def getRuleIndex(self):
            return CtParser.RULE_exported_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExported_item" ):
                listener.enterExported_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExported_item" ):
                listener.exitExported_item(self)




    def exported_item(self):

        localctx = CtParser.Exported_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exported_item)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CtParser.TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.type_decl()
                pass
            elif token in [CtParser.FN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.fn_decl()
                pass
            elif token in [CtParser.VAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.glob_var_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lib_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_def(self):
            return self.getTypedRuleContext(CtParser.Type_defContext,0)


        def fn_def(self):
            return self.getTypedRuleContext(CtParser.Fn_defContext,0)


        def glob_var_def(self):
            return self.getTypedRuleContext(CtParser.Glob_var_defContext,0)


        def getRuleIndex(self):
            return CtParser.RULE_lib_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLib_item" ):
                listener.enterLib_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLib_item" ):
                listener.exitLib_item(self)




    def lib_item(self):

        localctx = CtParser.Lib_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lib_item)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CtParser.TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.type_def()
                pass
            elif token in [CtParser.FN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.fn_def()
                pass
            elif token in [CtParser.VAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.glob_var_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(CtParser.TYPE, 0)

        def ID(self):
            return self.getToken(CtParser.ID, 0)

        def getRuleIndex(self):
            return CtParser.RULE_type_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_decl" ):
                listener.enterType_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_decl" ):
                listener.exitType_decl(self)




    def type_decl(self):

        localctx = CtParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(CtParser.TYPE)
            self.state = 181
            self.match(CtParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Glob_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(CtParser.VAR, 0)

        def ID(self):
            return self.getToken(CtParser.ID, 0)

        def getRuleIndex(self):
            return CtParser.RULE_glob_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlob_var_decl" ):
                listener.enterGlob_var_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlob_var_decl" ):
                listener.exitGlob_var_decl(self)




    def glob_var_decl(self):

        localctx = CtParser.Glob_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_glob_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(CtParser.VAR)
            self.state = 184
            self.match(CtParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fn_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(CtParser.FN, 0)

        def ID(self):
            return self.getToken(CtParser.ID, 0)

        def getRuleIndex(self):
            return CtParser.RULE_fn_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFn_decl" ):
                listener.enterFn_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFn_decl" ):
                listener.exitFn_decl(self)




    def fn_decl(self):

        localctx = CtParser.Fn_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fn_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(CtParser.FN)
            self.state = 187
            self.match(CtParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(CtParser.TYPE, 0)

        def ID(self):
            return self.getToken(CtParser.ID, 0)

        def placehldr_annot(self):
            return self.getTypedRuleContext(CtParser.Placehldr_annotContext,0)


        def COLON(self):
            return self.getToken(CtParser.COLON, 0)

        def type_spec(self):
            return self.getTypedRuleContext(CtParser.Type_specContext,0)


        def getRuleIndex(self):
            return CtParser.RULE_type_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_def" ):
                listener.enterType_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_def" ):
                listener.exitType_def(self)




    def type_def(self):

        localctx = CtParser.Type_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(CtParser.TYPE)
            self.state = 190
            self.match(CtParser.ID)
            self.state = 191
            self.placehldr_annot()
            self.state = 192
            self.match(CtParser.COLON)
            self.state = 193
            self.type_spec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fn_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(CtParser.FN, 0)

        def ID(self):
            return self.getToken(CtParser.ID, 0)

        def param_annot(self):
            return self.getTypedRuleContext(CtParser.Param_annotContext,0)


        def COLON(self):
            return self.getToken(CtParser.COLON, 0)

        def type_spec(self):
            return self.getTypedRuleContext(CtParser.Type_specContext,0)


        def fn_body(self):
            return self.getTypedRuleContext(CtParser.Fn_bodyContext,0)


        def getRuleIndex(self):
            return CtParser.RULE_fn_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFn_def" ):
                listener.enterFn_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFn_def" ):
                listener.exitFn_def(self)




    def fn_def(self):

        localctx = CtParser.Fn_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fn_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(CtParser.FN)
            self.state = 196
            self.match(CtParser.ID)
            self.state = 197
            self.param_annot()
            self.state = 198
            self.match(CtParser.COLON)
            self.state = 199
            self.type_spec()
            self.state = 200
            self.fn_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Glob_var_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(CtParser.VAR, 0)

        def ID(self):
            return self.getToken(CtParser.ID, 0)

        def COLON(self):
            return self.getToken(CtParser.COLON, 0)

        def type_spec(self):
            return self.getTypedRuleContext(CtParser.Type_specContext,0)


        def LEFT_MOVE(self):
            return self.getToken(CtParser.LEFT_MOVE, 0)

        def expr(self):
            return self.getTypedRuleContext(CtParser.ExprContext,0)


        def getRuleIndex(self):
            return CtParser.RULE_glob_var_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlob_var_def" ):
                listener.enterGlob_var_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlob_var_def" ):
                listener.exitGlob_var_def(self)




    def glob_var_def(self):

        localctx = CtParser.Glob_var_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_glob_var_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(CtParser.VAR)
            self.state = 203
            self.match(CtParser.ID)
            self.state = 204
            self.match(CtParser.COLON)
            self.state = 205
            self.type_spec()
            self.state = 206
            self.match(CtParser.LEFT_MOVE)
            self.state = 207
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_annotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LANGLE_BRACKET(self):
            return self.getToken(CtParser.LANGLE_BRACKET, 0)

        def params(self):
            return self.getTypedRuleContext(CtParser.ParamsContext,0)


        def RANGLE_BRACKET(self):
            return self.getToken(CtParser.RANGLE_BRACKET, 0)

        def getRuleIndex(self):
            return CtParser.RULE_param_annot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_annot" ):
                listener.enterParam_annot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_annot" ):
                listener.exitParam_annot(self)




    def param_annot(self):

        localctx = CtParser.Param_annotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_annot)
        try:
            self.state = 214
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CtParser.LANGLE_BRACKET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 209
                self.match(CtParser.LANGLE_BRACKET)
                self.state = 210
                self.params()
                self.state = 211
                self.match(CtParser.RANGLE_BRACKET)
                pass
            elif token in [CtParser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CtParser.ParamContext)
            else:
                return self.getTypedRuleContext(CtParser.ParamContext,i)

